[package]
name = "aws_dyn_dns"
version = "0.1.0"
authors = ["Fredrik <fredrik@jonsen.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_route53 = "0.42"
rusoto_core = "0.42"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
reqwest = "0.9.24"
env_logger = "0.7.1"
log = "0.4.8"